Details
-
Bug
-
Resolution: Done
-
P2: Important
-
Qt Creator 2.8.0-beta
-
f8b10163128db49175c25fa92b6dad12ff364925
Description
files: [ "../foo/bar/*.cpp" ]
cpp files in ../foo/bar appear in the tree under ".." (foo/bar is missing)
Attachments
Issue Links
- depends on
-
QBS-287 Wildcard handles relative path wrongly
-
- Closed
-
For Gerrit Dashboard: QTCREATORBUG-9378 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
57141,3 | Qbs: Simplify and fix qbs node management | 2.8 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |