Qbs: Simplify and fix qbs node management

The code is simpler now and also fixes a reported bug.

Task-number: QTCREATORBUG-9378
Change-Id: Ibb8cd7b074e840eb413b8d433405e47dcc63ee06
Reviewed-by: Daniel Teske <daniel.teske@digia.com>